# ptr

./: build.bash  cabal.project  ptr-magic.cabal  ptr.cabal  stack.yaml  typecheck.bash
.github/workflows/: deploy-docs-to-pages.yaml  format-and-test.yaml  integrate.yaml
bench/: Main.hs  results  results.md
sandbox/: Main.hs
tests/: Main.hs
