name:
  ptr-magic
version:
  0.2
category:
  Ptr, Data
synopsis:
  Abstractions for operations on pointers
homepage:
  https://github.com/nikita-volkov/ptr-magic 
bug-reports:
  https://github.com/nikita-volkov/ptr-magic/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2017, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/ptr-magic.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    PtrMagic.Take
  other-modules:
    PtrMagic.Parse
    PtrMagic.IO
    PtrMagic.Peek
    PtrMagic.Do
    PtrMagic.Prelude
  build-depends:
    -- data:
    text == 1.*,
    bytestring >= 0.10 && < 0.11,
    -- control:
    semigroups >= 0.18 && < 0.20,
    profunctors >= 5.1 && < 6,
    contravariant >= 1.3 && < 2,
    mtl >= 2 && < 3,
    transformers >= 0.3 && < 0.6,
    -- errors:
    bug == 1.*,
    -- general:
    base-prelude >= 1 && < 2,
    base >= 4.7 && < 5

test-suite sandbox
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    sandbox
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    ptr-magic,
    bug == 1.*,
    rerebase == 1.*
